--- a/frontie/src/style.less
+++ b/frontie/src/style.less
@@ -1,3 +1,7 @@
+.pending-reserve {
+    background-color:yellow !important;
+}
+
 .reserved {
     background-color: red !important;
     pointer-events: none; 
